--- a/DijkstraNetwork/omnetpp.ini
+++ b/DijkstraNetwork/omnetpp.ini
@@ -3,4 +3,4 @@ cmdenv-interactive=true
 network = dijkstranetwork.dijkstra
 dijkstra.mainNMU.sourceID = 0
 dijkstra.mainNMU.destinationID = 10
-dijkstra.mainNMU.pathsWeight = "2 4 10 5 13 1 7 19 3 9 1 16 11 18 4 8 21 13 19 4"
+dijkstra.mainNMU.pathsWeight = "nodeGate[0]$o[1]->nodeGate[1]$o[0]:2|nodeGate[0]$o[2]->nodeGate[8]$o[0]:10|nodeGate[1]$o[1]->nodeGate[2]$o[0]:4|nodeGate[1]$o[2]->nodeGate[3]$o[0]:20|nodeGate[2]$o[1]->nodeGate[5]$o[0]:14|nodeGate[3]$o[1]->nodeGate[4]$o[0]:9|nodeGate[3]$o[2]->nodeGate[10]$o[0]:18|nodeGate[4]$o[1]->nodeGate[5]$o[1]:7|nodeGate[4]$o[2]->nodeGate[6]$o[0]:24|nodeGate[5]$o[2]->nodeGate[7]$o[0]:13|nodeGate[5]$o[3]->nodeGate[12]$o[0]:1|nodeGate[6]$o[1]->nodeGate[8]$o[1]:490|nodeGate[7]$o[1]->nodeGate[9]$o[1]:3|nodeGate[8]$o[2]->nodeGate[9]$o[0]:15|nodeGate[9]$o[2]->nodeGate[11]$o[0]:30|nodeGate[9]$o[3]->nodeGate[13]$o[0]:29|nodeGate[10]$o[1]->nodeGate[13]$o[1]:8|nodeGate[11]$o[1]->nodeGate[12]$o[1]:6|nodeGate[12]$o[2]->nodeGate[13]$o[2]:2"
